fix visible CMD textarea when page use box-shadow

--- a/css/jquery.terminal-src.css
+++ b/css/jquery.terminal-src.css
@@ -36,6 +36,7 @@
     outline: none !important;
     padding: 0 !important;
     resize: none !important;
+    box-shadow: none !important;
     z-index: 1000 !important;
     overflow: hidden !important;
     white-space: pre !important;
