--- a/css/jquery.terminal.css
+++ b/css/jquery.terminal.css
@@ -4,7 +4,7 @@
  *  __ / // // // // // _  // _// // / / // _  // _//     // //  \/ // _ \/ /
  * /  / // // // // // ___// / / // / / // ___// / / / / // // /\  // // / /__
  * \___//____ \\___//____//_/ _\_  / /_//____//_/ /_/ /_//_//_/ /_/ \__\_\___/
- *           \/              /____/                              version 2.39.0
+ *           \/              /____/                              version DEV
  * http://terminal.jcubic.pl
  *
  * This file is part of jQuery Terminal.
@@ -12,7 +12,7 @@
  * Copyright (c) 2011-2023 Jakub T. Jankiewicz <https://jcubic.pl/me>
  * Released under the MIT license
  *
- * Date: Tue, 13 Feb 2024 21:18:13 +0000
+ * Date: Sat, 02 Mar 2024 17:57:52 +0000
  */
 .terminal .terminal-output .format, .cmd .format,
 .cmd-prompt, .cmd-prompt div {
@@ -36,6 +36,7 @@
     outline: none !important;
     padding: 0 !important;
     resize: none !important;
+    box-shadow: none !important;
     z-index: 1000 !important;
     overflow: hidden !important;
     white-space: pre !important;
